# minimal

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONCEPT.txt  FAQ.md  FAQ.txt  INSTALL.md  INSTALL.txt  README.md  README.txt  RULES.md  index.html  minimal.pro  mmms.pro  params.json  update
data/: stoat_suppression_list.txt
doc/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  config.h.in  env.in  minimal.pc.in
src/core/: CMakeLists.txt  USAGE.txt  engine.cpp  engine.h  jack_engine.cpp  jack_engine.h  loaded_project.cpp  loaded_project.h  main.cpp  os_engine.cpp  os_engine.h  player.cpp  player.h  plugin.cpp  plugin.h  ports.cpp  ports.h
src/include/: CMakeLists.txt  atomic.h  audio.cpp  audio.h  audio_instrument.cpp  audio_instrument.h  audio_protocol.h  audio_sink.h  bars.cpp  bars.h  command.cpp  command.h  command_tools.cpp  command_tools.h  daw.cpp  daw.h  daw_visit.cpp  daw_visit.h  debug.cpp  debug.h  effect.cpp  effect.h  event_roll.cpp  event_roll.h  fraction.cpp  fraction.h  impl.h  instrument.cpp  instrument.h  io.cpp  io.h  jack.cpp  jack.h  jack_player.cpp  jack_player.h  ladspa_plugin.cpp  ladspa_plugin.h  lfo.cpp  lfo.h  lo_port.cpp  (+40 more)
src/include/unused/: daw_visit.cpp  daw_visit.h  lo_port.cpp  lo_port.h  minimal_plugin.h  pid.cpp  pid.h  rtosc_con.h  zynaddsubfx.cpp  zynaddsubfx.h
src/songs/: CMakeLists.txt  debug_proj.cpp  demo.cpp
src/songs/unused/: demo.cpp
src/test/: CMakeLists.txt  commands.cpp  maths.cpp  test_str.cpp
submodules/: CMakeLists.txt
